--- a/05._HTML_Server/public/frontpage/frontpage.html
+++ b/05._HTML_Server/public/frontpage/frontpage.html
@@ -6,7 +6,7 @@
 
     
     <!-- 3. link to external CSS file  -->
-    <!-- <link rel="stylesheet" href="./frontpage.css"> -->
+    <link rel="stylesheet" href="./frontpage.css">
 
     <!-- 2. CSS in style tag -->
     <style>
